tests/init_state/error_span/structured_use_after_move_at_call_span.err.expected
error: at 7:17: [INIT-UseAfterMove] In function 'f', block 'entry': variable 'x' is used after move
   |
 7 |                 call take(move x);
   |                 ^^^^^^^^^^^^^^^^^
